--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  color:#40510E;
   text-align: center;
   font-family: 'Merriweather', serif;
 }
@@ -12,27 +13,55 @@ h1 {
   line-height: 2;
 }
 
+
+
+
+
+
 h2 {
   font-family: 'Montserrat', sans-serif;
-  color:#66BFBF;
+  color:#11999E;
   font-weight: normal;
 }
 
 h3 {
   font-family: 'Montserrat', sans-serif;
-  color:#11999E;
+  color:#66BFBF;
+}
+
+
+hr {
+  border:dotted #CFD2CF 6px;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto;
+}
+
+.middle-container {
+  margin: 90px 0;
+}
+
+.intro {
+  margin:35px auto;
+  line-height: 1.5;
+  width: 45%;
+}
+
+.skills {
+  margin: 30px 0 0 0;
 }
 
 
 .topcloud {
   position: relative;
-  margin-top: 20px;
-  left: 150px;
+  margin-top: 28px;
+  left: 400px;
 }
 
 .bottomcloud{
   margin: 50px auto 0 auto;
   position: absolute;
+  left:250px;
 }
 
 .moutain{
@@ -45,12 +74,126 @@ h3 {
 }
 
 
-.skill-row {
+
+.pythonimg {
+  float: left;
+  position: relative;
+  top:20px;
+  width: 170px;
+  margin: 10px 10px 20px 10px;
+}
+
+.cimg {
+  float: right;
+  position: relative;
+  bottom:10px;
+  width: 185px;
+  margin: 10px 10px 20px 10px;
+}
+
+.htmlimg {
+  float: left;
+  width: 160px;
+  position: relative;
+  bottom: 25px;
+  margin: 15px 10px 20px 10px;
+}
+
+.sqlimg{
+  float: right;
+  width: 160px;
+  position: relative;
+  bottom: 25px;
+  margin: 15px 10px 20px 10px;
+}
+
+.skill-row1 {
   width:50%;
-  margin: auto;
+  text-align: left;
+  margin: 45px auto 90px auto;
+  line-height: 1.5;
+}
+
+.skill-row2 {
+  width:50%;
+  text-align: right;
+  line-height: 1.5;
+  margin: 45px auto 80px auto;
+}
+
+.skill-row3 {
+  width:50%;
+  text-align: left;
+  margin: 45px auto 100px auto;
+  line-height: 1.5;
+}
+
+.skill-row4 {
+  width:50%;
+  text-align: right;
+  margin: 45px auto 130px auto;
+  line-height: 1.5;
 }
 
 
+
+.contact-me {
+  width: 35%;
+  margin: 5px auto 5px auto;
+}
+
+.text {
+  line-height: 1.5;
+}
+
+
+
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+
+.bottom-container {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #66BFBF;
+}
+
 .footer-link {
   color:#11999E;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+  margin: 10px 10px;
+}
+
+a:hover {
+  color: #EAF6F6;
+}
+
+.name {
+  color: #EAF6F6;
+  font-size: 0.8rem;
+  padding: 10px 0;
 }
