--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ a:hover {
 
 .contact-me {
   width: 35%;
-  margin: 5px auto 5px auto;
+  margin: 50px auto 50px auto;
 }
 
 .text {
@@ -210,6 +210,7 @@ a:hover {
 }
 
 .project-img {
+  margin-top: 30px;
   width:75%;
   position: relative;
   left: 35px;
@@ -259,7 +260,7 @@ a:hover {
   color:#11999E;
   font-family: 'Montserrat', sans-serif;
   text-decoration: none;
-  margin: 10px 10px;
+  margin: 15px 10px;
 }
 
 
